Update plot() and readme file use .at() of Armadillo to enjoy small speed-up in greedy algorithm

--- a/README.Rmd
+++ b/README.Rmd
@@ -63,21 +63,29 @@ ind <- c(rev(liberal_ind[order(liberal_cp_con,decreasing=TRUE)]),
          conserv_ind[order(conserv_cp_con,decreasing=TRUE)],use.names=FALSE);
 ```
 
-
 You can use a user-specified indices for plots. Here is an example:
 ```{r example2}
 print(ind) 
 ## Users can specify the index order of heatmap
 plot(hist_polblog, idx_order = ind)
-## Users can specify the color palette 
+
+## Users can specify the color palette
 library(RColorBrewer)
 plot(hist_polblog,  idx_order = ind, col = brewer.pal(9, "Greys"))
 ```
 
+You can display the estimated block probabilities by setting `prob=TRUE`.
+```{r example3}
+## Users can specify the color palette 
+plot(hist_polblog,  idx_order = ind, prob= TRUE, prob.col = "blue",
+     col = colorRampPalette(colors=c("#FFFFFF","#000000"))(200))
+```
+
+
 ### Summary violin plot
 
 If you want to check network summary violin plot of the data set:
-```{r example3}
+```{r example4}
 #User-specified subsample size.
 violin_netsummary(polblog, max_cycle_order = 7, subsample_sizes = 250) 
 #Auto-selected subsample size.
