--- a/reference.bib
+++ b/reference.bib
@@ -2,7 +2,7 @@
 	title = {Topology reveals universal features for network comparison},
 	url = {http://arxiv.org/abs/1705.05677},
 	urldate = {2021-09-06},
-	journal = {arXiv:1705.05677 [cs, math, stat]},
+	journal = {arXiv:1705.05677},
 	author = {Maugis, Pierre-André G. and Olhede, Sofia C. and Wolfe, Patrick J.},
 	month = may,
 	year = {2017},
@@ -14,7 +14,7 @@
 	title = {Nonparametric graphon estimation},
 	url = {http://arxiv.org/abs/1309.5936},
 	urldate = {2021-09-06},
-	journal = {arXiv:1309.5936 [math, stat]},
+	journal = {arXiv:1309.5936},
 	author = {Wolfe, Patrick J. and Olhede, Sofia C.},
 	month = sep,
 	year = {2013},
