consistent format of bibtex

--- a/reference.bib
+++ b/reference.bib
@@ -32,7 +32,7 @@
 	number = {41},
 	urldate = {2021-09-15},
 	journal = {Proceedings of the National Academy of Sciences},
-	author = {Olhede, S. C. and Wolfe, P. J.},
+	author = {Olhede, Sofia C. and Wolfe, Patrick J.},
 	month = oct,
 	year = {2014},
 	pages = {14722--14727}
